--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "ddu-backend",
   "version": "0.1.0",
   "description": "",
-  "main": "dist/main.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "npm run build && node dist/main.js",
-    "dev": "ts-node src/main.ts",
+    "start": "node dist/server.js",
+    "dev": "ts-node src/server.ts",
     "db:start": "docker run -d -e POSTGRES_DB=service_db -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=admin -p 5432:5432 --health-cmd pg_isready --health-interval 1s --health-timeout 5s --health-retries 30 postgres:14.5",
     "build": "tsc",
     "build:docker": "npm install && npm run build && docker build . -t dev/identity-service:latest",
