--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,13 @@
     "bech32": "^2.0.0",
     "bip39": "^3.0.4",
     "cbor": "^8.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-jwt": "^8.2.1",
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.21.6",
     "umzug": "^3.2.1",
@@ -35,6 +40,8 @@
     "winston-cloudwatch": "^6.1.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
