--- a/backend/package.json
+++ b/backend/package.json
@@ -21,17 +21,21 @@
     "@blockfrost/blockfrost-js": "^5.0.0",
     "@emurgo/cardano-message-signing-nodejs": "^1.0.1",
     "@emurgo/cardano-serialization-lib-nodejs": "^11.0.5",
+    "@types/compression": "^1.7.2",
     "axios": "^0.27.2",
     "bech32": "^2.0.0",
     "bip39": "^3.0.4",
     "cbor": "^8.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-jwt": "^8.2.1",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "node-cache": "^5.1.2",
     "pg": "^8.8.0",
     "sequelize": "^6.21.6",
     "umzug": "^3.2.1",
