--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,14 +26,9 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
 
-  # frontend:
-  #   build: ./frontend
-  #   container_name: ddu_frontend
-  #   command: npm run dev
-  #   ports:
-  #     - 3000:3000
-  #   restart: always
-  #   volumes:
-  #     - ./frontend:/app
-  #     - ./frontend/node_modules:/app/node_modules
-  #     - ./frontend/.next:/app/.next
+  frontend:
+    image: docker-nextjs
+    build: ./frontend
+    container_name: ddu_frontend
+    ports:
+      - 3000:3000
