--- a/.github/workflows/docker-preprod-publish.yml
+++ b/.github/workflows/docker-preprod-publish.yml
@@ -22,7 +22,6 @@ jobs:
     - name: Backend - build 
       working-directory: backend 
       run: |
-        npm run login:aws
         npm ci
         npm run build
 
@@ -44,7 +43,7 @@ jobs:
       run: |
         echo "Image name $REGISTRY/$REPOSITORY:$IMAGE_TAG"
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-      # docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
     - name: Frontend - Build, tag, and push docker image to Amazon ECR
       id: docker-build-push-frontend
