--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:18
 
-WORKDIR /code
+WORKDIR /usr/src/app
 
 COPY --chown=node package*.json ./
 COPY --chown=node ./dist ./dist
-COPY --chown=node ./src ./src
 COPY --chown=node ./node_modules ./node_modules
 
 USER node
-EXPOSE 8080
+EXPOSE 5000
+CMD [ "node", "dist/server.js" ]
