nft metadata added to image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /usr/src/app
 COPY --chown=node package*.json ./
 COPY --chown=node ./dist ./dist
 COPY --chown=node ./node_modules ./node_modules
+COPY --chown=node ./nfts_metadata ./nfts_metadata
 
 USER node
 EXPOSE 5000
