nginx production conf changed

--- a/nginx/conf.d/production.conf
+++ b/nginx/conf.d/production.conf
@@ -49,13 +49,30 @@ upstream frontend {
 }
 
 server {
+	listen 0.0.0.0:80;
+	server_name ddu.gg;
+	access_log off;
+
+	location /.well-known/acme-challenge/ {
+    	root /var/www/certbot;
+	}
+
+	location / {
+		return 301 https://$host$request_uri;
+	}
+}
+
+server {
 	client_body_timeout 12s;
 	client_header_timeout 12s;
 	server_tokens   off;
 
-	listen 80;
+	listen 443 ssl;
 
 	server_name ddu.gg;
+
+	ssl_certificate /etc/nginx/ssl/live/ddu.gg/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/ddu.gg/privkey.pem;
 
 	location /static/{
 		alias /code/static/;
