--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,5 +42,12 @@ services:
       - 443:443
     volumes:
         - ./nginx/conf.d:/etc/nginx/conf.d
+        - ./certbot/www:/var/www/certbot/:ro
     depends_on:
         - backend
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+          - ./certbot/www/:/var/www/certbot/:rw
+          
