--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,9 @@ version: '3.8'
 
 services:
   backend:
-    build: ./backend
-    container_name: ddu_backend
-    command: npm run start --trace-sync-io
+    image: registry.digitalocean.com/ddu-cr/ddu-backend:preprod
     ports:
       - 5000:5000
-    volumes:
-      - ./backend:/code
     env_file:
       - ./backend/.env
     restart: always
@@ -27,8 +23,7 @@ services:
       POSTGRES_USER: postgres
 
   frontend:
-    image: docker-nextjs
-    build: ./frontend
+    image: registry.digitalocean.com/ddu-cr/ddu-frontend:preprod
     container_name: ddu_frontend
     env_file:
       - ./frontend/.env
@@ -41,7 +36,7 @@ services:
       - 80:80
       - 443:443
     volumes:
-        - ./nginx/conf.d:/etc/nginx/conf.d
+        - ./nginx/conf.d/production.conf:/etc/nginx/conf.d/local.conf
         - ./certbot/www:/var/www/certbot/:ro
     depends_on:
         - backend
