--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev": "ts-node src/server.ts",
     "db:start": "docker run -d -e POSTGRES_DB=service_db -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=admin -p 5432:5432 --health-cmd pg_isready --health-interval 1s --health-timeout 5s --health-retries 30 postgres:14.5",
     "build": "tsc",
-    "build:docker": "npm install && npm run build && docker build . -t dev/identity-service:latest",
+    "build:docker": "npm install && npm run build && docker build . -t ddu-backend:local",
     "lint": "eslint . --ext .ts",
     "test": "jest ./src",
     "jest": "jest",
