fixed pipelines required env vars

--- a/.github/workflows/build-test-service.yml
+++ b/.github/workflows/build-test-service.yml
@@ -40,6 +40,14 @@ jobs:
 
     - name: Backend - build and test
       working-directory: backend
+      env:
+        POLICY_DRAGON_SILVER: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        POLICY_PIXEL_TILES: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        POLICY_GMAS: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        POLICY_THIOLDEN: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        POLICY_EMOJIS: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        POLICY_SLIMES: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        POLICY_FURNITURE: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
       run: |
         npm ci
         npm run build
