--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@emurgo/cardano-message-signing-nodejs": "^1.0.1",
     "@emurgo/cardano-serialization-lib-nodejs": "^11.2.1",
     "@types/compression": "^1.7.2",
+    "@types/node-fetch": "^2.6.2",
     "@types/random-seed": "^0.3.3",
     "axios": "^0.27.2",
     "bech32": "^2.0.0",
@@ -38,6 +39,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.0",
     "pg": "^8.8.0",
     "random-seed": "^0.3.0",
     "sequelize": "^6.21.6",
