--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "cookies-next": "^2.1.1",
     "formik": "^2.2.9",
     "next": "12.2.5",
+    "phaser": "^3.55.2",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
