--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
+    "@types/underscore": "^1.11.4",
     "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
     "cookies-next": "^2.1.1",
@@ -34,6 +35,7 @@
     "sharp": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "string-hex": "^1.0.0",
+    "underscore": "^1.13.6",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
