--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -35,8 +35,7 @@ yarn-error.log*
 *.tsbuildinfo
 
 public/textures/
-public/maps/aseprite/
-public/maps
+public/maps/
 
 backend/.npmrc
 frontend/.npmrc
