--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
     "@types/underscore": "^1.11.4",
+    "@types/url-join": "^4.0.1",
     "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
     "cookies-next": "^2.1.1",
@@ -36,6 +37,7 @@
     "slick-carousel": "^1.8.1",
     "string-hex": "^1.0.0",
     "underscore": "^1.13.6",
+    "url-join": "^5.0.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
