--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emurgo/cardano-serialization-lib-browser": "^11.2.1",
     "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/random-seed": "^0.3.3",
     "@types/react-redux": "^7.1.24",
     "@types/underscore": "^1.11.4",
     "@types/url-join": "^4.0.1",
@@ -26,6 +27,7 @@
     "formik": "^2.2.9",
     "next": "12.2.5",
     "phaser": "^3.55.2",
+    "random-seed": "^0.3.0",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
