--- a/backend/stubs/test-quest-registry.yaml
+++ b/backend/stubs/test-quest-registry.yaml
@@ -1,4 +1,13 @@
 
+questId: "quest-0"
+name: "Test Quest 0"
+location: "Auristar"
+description: "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."
+requirements: 
+- aps: [1, 1, 1]
+
+---
+
 questId: "quest-1"
 name: "Test Quest 1"
 location: "Auristar"
