--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon src/server.ts",
     "gen:test-registry": "ts-node src/gen-test-registry.ts",
     "db:start": "docker run -d -e POSTGRES_DB=service_db -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=admin -p 5432:5432 --health-cmd pg_isready --health-interval 1s --health-timeout 5s --health-retries 30 postgres:14.5",
+    "ls": "ls",
+    "proxy:start": "docker run --name nginx-proxy -p 80:80 -v $(pwd)/nginx.dev.conf:/etc/nginx/nginx.conf:ro -d nginx:1.13",
+    "proxy:start:win": "docker run --name nginx-proxy -p 80:80 -v %cd%/nginx.dev.conf:/etc/nginx/nginx.conf:ro -d nginx:1.13",
     "db:generate-migration": "sequelize-cli migration:generate",
     "build": "tsc",
     "build:docker": "npm install && npm run build && docker build . -t ddu-backend:local",
@@ -56,6 +59,7 @@
     "@types/node": "^18.7.14",
     "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1",
+    "shx": "^0.3.4",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
