--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "express-winston": "^4.2.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "lucid-cardano": "^0.10.1",
     "node-cache": "^5.1.2",
     "pg": "^8.8.0",
     "random-seed": "^0.3.0",
