--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "main": "dist/server.js",
+  "type": "module",
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
@@ -24,7 +25,7 @@
   "dependencies": {
     "@blockfrost/blockfrost-js": "^5.0.0",
     "@emurgo/cardano-message-signing-nodejs": "^1.0.1",
-    "@emurgo/cardano-serialization-lib-nodejs": "^11.2.1",
+    "@emurgo/cardano-serialization-lib-nodejs": "^11.3.1",
     "@types/compression": "^1.7.2",
     "@types/random-seed": "^0.3.3",
     "axios": "^0.27.2",
@@ -57,12 +58,12 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.15.11",
     "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1",
     "shx": "^0.3.4",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "typescript": "^5.0.4"
   }
 }
