--- a/backend/package.json
+++ b/backend/package.json
@@ -59,6 +59,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.15.11",
+    "@types/yaml": "^1.9.7",
     "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1",
     "shx": "^0.3.4",
