--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "description": "",
   "main": "dist/server.js",
-  "type": "module",
   "scripts": {
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
@@ -18,7 +17,8 @@
     "lint": "eslint . --ext .ts",
     "test": "jest ./src",
     "jest": "jest",
-    "secrets:replace": "node ./secret-replace.js"
+    "secrets:replace": "node ./secret-replace.js",
+    "babel": "babel src/server.ts --out-file dist/bundle.js"
   },
   "author": "The Adventurers of Drunken Dragon Entertainment",
   "license": "MIT",
@@ -54,6 +54,11 @@
     "yaml": "^2.2.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
