--- a/backend/package.json
+++ b/backend/package.json
@@ -23,11 +23,13 @@
   "author": "The Adventurers of Drunken Dragon Entertainment",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.342.0",
     "@blockfrost/blockfrost-js": "^5.0.0",
     "@emurgo/cardano-message-signing-nodejs": "^1.0.1",
     "@emurgo/cardano-serialization-lib-nodejs": "^11.3.1",
     "@types/compression": "^1.7.2",
     "@types/random-seed": "^0.3.3",
+    "aws-sdk": "^2.1387.0",
     "axios": "^0.27.2",
     "bech32": "^2.0.0",
     "bip39": "^3.0.4",
@@ -49,7 +51,7 @@
     "sequelize": "^6.21.6",
     "umzug": "^3.2.1",
     "uuidv4": "^6.2.13",
-    "winston": "^3.8.2",
+    "winston": "^3.9.0",
     "winston-cloudwatch": "^6.1.1",
     "yaml": "^2.2.1"
   },
