--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ddu-backend",
   "version": "0.1.0",
+  "type": "module",
   "description": "",
   "main": "dist/server.js",
   "scripts": {
@@ -29,6 +30,7 @@
     "@emurgo/cardano-serialization-lib-nodejs": "^11.3.1",
     "@types/compression": "^1.7.2",
     "@types/random-seed": "^0.3.3",
+    "ajv": "^8.12.0",
     "aws-sdk": "^2.1387.0",
     "axios": "^0.27.2",
     "bech32": "^2.0.0",
@@ -61,6 +63,7 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
+    "@types/ajv": "^1.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
