--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,8 @@
         "moduleResolution": "node",
         "esModuleInterop": true,
         "sourceMap": true,
-        "outDir": "dist",
+        "outDir": "./dist",
+        "rootDir": "./src",
         "strict": true,
         "noImplicitAny": true,
         "strictNullChecks": true,
@@ -13,6 +14,7 @@
         "strictBindCallApply": true,
         "strictPropertyInitialization": true,
         "noImplicitThis": true,
-        "alwaysStrict": true
+        "alwaysStrict": true,
+        "resolveJsonModule": true,
   }
 }
