--- a/blockchain/deno.json
+++ b/blockchain/deno.json
@@ -1,5 +1,5 @@
 {
     "tasks": {
-        "dev": "denon run -A ./src/server.ts"
+        "dev": "deno run --allow-net --allow-read --allow-env ./main.ts"
     }
 }
