--- a/blockchain/Dockerfile
+++ b/blockchain/Dockerfile
@@ -10,12 +10,12 @@ USER deno
 
 # Cache the dependencies as a layer (the following two steps are re-run only when deps.ts is modified).
 # Ideally cache deps.ts will download and compile _all_ external files used in main.ts.
-COPY deps.ts .
-RUN deno cache deps.ts
+COPY --chown=deno ./deno.lock ./deno.lock
+COPY --chown=deno ./src/deps.ts ./src/deps.ts
+RUN deno cache ./src/deps.ts
 
 # These steps will be re-run upon each file change in your working directory:
-ADD . .
-# Compile the main app so that it doesn't need to be compiled each startup/entry.
-RUN deno cache main.ts
+COPY --chown=deno ./src ./src
+RUN deno cache ./src/server.ts
 
-CMD ["run", "--allow-net", "--allow-read", "--allow-env", "main.ts"]
+CMD ["run", "--allow-net", "--allow-read", "--allow-env", "src/server.ts"]
