--- a/.github/workflows/docker-mainnet-publish.yml
+++ b/.github/workflows/docker-mainnet-publish.yml
@@ -58,6 +58,7 @@ jobs:
         IMAGE_TAG: mainnet # a-${{ steps.date.outputs.date }}-${{ github.sha }}
       run: |
         echo "Image name $REGISTRY/$REPOSITORY:$IMAGE_TAG"
+        echo -e "NEXT_PUBLIC_ENVIROMENT=production" >> .env.local 
         echo -e "NEXT_PUBLIC_API_BASE_HOSTNAME=https://ddu.gg" >> .env.local 
         echo -e "NEXT_PUBLIC_CARDANO_NETWORK=Mainnet" >> .env.local 
         echo -e "NEXT_PUBLIC_BLOCKFROST_API_KEY=${{ secrets.BLOCKFROST_API_KEY_MAINNET }}" >> .env.local 
