--- a/.github/workflows/docker-preprod-publish.yml
+++ b/.github/workflows/docker-preprod-publish.yml
@@ -58,6 +58,7 @@ jobs:
         IMAGE_TAG: preprod # a-${{ steps.date.outputs.date }}-${{ github.sha }}
       run: |
         echo "Image name $REGISTRY/$REPOSITORY:$IMAGE_TAG"
+        echo -e "NEXT_PUBLIC_ENVIROMENT=development" >> .env.local 
         echo -e "NEXT_PUBLIC_API_BASE_HOSTNAME=https://preprod.ddu.gg" >> .env.local 
         echo -e "NEXT_PUBLIC_CARDANO_NETWORK=Preprod" >> .env.local 
         echo -e "NEXT_PUBLIC_BLOCKFROST_API_KEY=${{ secrets.BLOCKFROST_API_KEY_PREPROD }}" >> .env.local 
