--- a/.github/workflows/docker-mainnet-publish.yml
+++ b/.github/workflows/docker-mainnet-publish.yml
@@ -63,7 +63,7 @@ jobs:
         echo -e "NEXT_PUBLIC_CARDANO_NETWORK=Mainnet" >> .env.local 
         echo -e "NEXT_PUBLIC_BLOCKFROST_API_KEY=${{ secrets.BLOCKFROST_API_KEY_MAINNET }}" >> .env.local 
         echo -e "NEXT_PUBLIC_DISCORD_CLIENT_ID='1017194651008106516'" >> .env.local 
-        echo -e "NEXT_PUBLIC_DISCORD_REDIRECT_URI=https%3A%2F%2Fddu.gg" >> .env.local 
+        echo -e "NEXT_PUBLIC_DISCORD_REDIRECT_URI=https%3A%2F%2Fddu.gg/inq" >> .env.local 
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
