--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^9.0.0",
     "lucid-cardano": "^0.10.1",
     "node-cache": "^5.1.2",
+    "node-schedule": "^2.1.0",
     "pg": "^8.8.0",
     "random-seed": "^0.3.0",
     "sequelize": "^6.21.6",
@@ -66,6 +67,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.15.11",
+    "@types/node-schedule": "^2.1.0",
     "@types/yaml": "^1.9.7",
     "nodemon": "^2.0.19",
     "sequelize-cli": "^6.4.1",
