--- a/.github/workflows/docker-preprod-publish.yml
+++ b/.github/workflows/docker-preprod-publish.yml
@@ -67,7 +67,6 @@ jobs:
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
-    # TODO, change the Discord client ID
     - name: Frontend (Demeter) - Build, tag, and push
       id: docker-build-push-frontend-demeter
       working-directory: frontend
@@ -78,11 +77,11 @@ jobs:
       run: |
         echo "Image name $REGISTRY/$REPOSITORY:$IMAGE_TAG"
         echo -e "NEXT_PUBLIC_ENVIROMENT=development" >> .env.local 
-        echo -e "NEXT_PUBLIC_API_BASE_HOSTNAME=https://demeter.preprod.ddu.gg" >> .env.local 
+        echo -e "NEXT_PUBLIC_API_BASE_HOSTNAME=https://dde-preprod.demeter.run/" >> .env.local 
         echo -e "NEXT_PUBLIC_CARDANO_NETWORK=Preprod" >> .env.local 
         echo -e "NEXT_PUBLIC_BLOCKFROST_API_KEY=${{ secrets.BLOCKFROST_API_KEY_PREPROD }}" >> .env.local 
-        echo -e "NEXT_PUBLIC_DISCORD_CLIENT_ID='1129939274855358504'" >> .env.local 
-        echo -e "NEXT_PUBLIC_DISCORD_REDIRECT_URI=https%3A%2F%2Fdemeter.preprod.ddu.gg/inq" >> .env.local 
+        echo -e "NEXT_PUBLIC_DISCORD_CLIENT_ID='1177649726934487171'" >> .env.local 
+        echo -e "NEXT_PUBLIC_DISCORD_REDIRECT_URI=https%3A%2F%2Fdde-preprod.demeter.run/inq" >> .env.local 
         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
 
